@@ -1,3 +1,8 @@
+Fri Nov  6 11:01:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (call_trace_func): remove the trace hook if any exception
+	  raised.  [ruby-list:46515]
+
 Fri Nov  6 10:56:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (get_event_name): added thread events.
